# gui-playground

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/color-test/: CMakeLists.txt
apps/color-test/src/: main.cpp  palette.cpp  palette.hpp  rayoperators.hpp  swatch.cpp  swatch.hpp
